# searchingVelma

./: .gitignore  CMakeLists.txt  package.xml
cnnscripts/: test.py  train_cnn1.py
cppscripts/: cylinder_segmentation.cpp  move_base.cpp
csv/: empty_table.csv
launch/: initialize_system.launch  service_runner.launch  velma_system_mobile.launch
maps/: search_are.yaml
models/house/house/: model.sdf
models/korytarz/Untitled/: model.sdf
models/korytarz/korytarz/: model.sdf
models/korytarz/korytarz/Untitled/: model.sdf
models/models/bowl_high/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/models/bowl_high/meshes/: bowl_high.dae
models/models/box1/: model.config  model.sdf
models/models/box2/: model.config  model.sdf
models/models/box3/: model.config  model.sdf
models/models/cabinet_door/: cabinet.blend  model.config  model.sdf
models/models/cabinet_door_fragile/: model.config  model.sdf
models/models/coffee_cup/: model.config  model.sdf
models/models/coffee_cup/meshes/: coffee_cup.dae  coffee_cup.stl  coffee_cup_v2.stl  coffee_cup_v2_collision.stl
models/models/coffee_spoon/: model.config  model.sdf
models/models/coffee_spoon/meshes/: coffee_spoon_collision.stl  spoon.dae  spoon.stl
models/models/cup_cake/: model.config  model.sdf
models/models/cup_cake/meshes/: cupcake_v2_collision.stl
models/models/dummy/: model.config  model.sdf
models/models/fork/: model.config  model.sdf
models/models/fork/meshes/: fork.dae  fork.stl  fork_collision.stl
models/models/jar/: model.config  model.sdf
models/models/jar_marker/: model.config  model.sdf
models/models/jar_marker/meshes/: jar_marker.dae
models/models/marker_0/: model.config  model.sdf
models/models/marker_0/meshes/: marker_0.dae
rviz/: rviz.rviz
scripts/: beer_service.py  camera_kinect_rgb.py  csv_gen.py  data_creator.py  detection_service.py  finite_state_machine.py  lookup_service.py  model_pose.py  object_tf_publisher.py  opening_service.py  robot_moves.py  utils.py
srv/: Beer.srv  Stpt.srv
temps/: test3.py  train_cnn2.py
worlds/: dart_world.world
