<package>
<name>searcher</name>
<version>1.2.4</version>
<description>uzupelnic</description>
<maintainer email="igorudnicki@wp.pl"> DO-UZUPELNIENIA!!!! </maintainer>
<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>velma_common</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
